--- a/home_work_1/style.css
+++ b/home_work_1/style.css
@@ -65,3 +65,93 @@ nav{
     text-align: center;
     width: 300px;
 }
+
+/* section start  */
+
+.collections{
+    display: flex;
+    margin: 10px auto;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.collections h1{
+    text-align: center;
+}
+
+/* section end  */
+
+/* cars  */
+
+.card-row{
+    display: flex;
+    gap: 18px;
+    align-items: flex-start;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+
+.card{
+    width: 280px;
+    background: #ffffff;
+    border-radius: 12px;
+    overflow: hidden;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    transition: transform .18s ease, box-shadow .18s ease;
+}
+
+.card:hover{
+    transform: translateY(-6px);
+    box-shadow: 0 18px 36px rgba(20, 20, 40, 0.12);
+}
+
+.card-image{
+    width: 100%;
+    height: 180px;
+    background-origin: #f3f4f6;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 10px;
+}
+
+.card-image img{
+    max-width: 100%;
+    max-height: 100%;
+    object-fit: contain;
+    display: block;
+}
+
+.card-body{
+    padding:  14px 16px 18px;
+    display: flex;
+    flex-direction: column;
+    gap: 12px;
+    align-items: center;
+}
+
+.card-title{
+    font-size: 16px;
+    font-weight: 600px;
+    margin: 0;
+    line-height: 1.2;
+    color: #0b1220;
+    text-transform: uppercase;
+}
+
+.card-action{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+
+.btn{
+    width: 40px;
+    height: 20px;
+    border-radius: 20px;
+    background-color: #F7F6F0;
+    text-transform: uppercase;
+    font-size: 10px;
+}
